--- a/alm/src/main/resources/application-dev.properties
+++ b/alm/src/main/resources/application-dev.properties
@@ -76,4 +76,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 bpmc.server.address=http://bpmc.diligrp.com:8617
-alm.contextPath=http://almweb.diligrp.com
+bpmn.server.address=http://bpmd.diligrp.com:8618
+alm.server.address=http://almweb.diligrp.com
